# poor-man-s-data-lake-duckdb

./: .pre-commit-config.yaml  README.md  pyproject.toml
jaffle/: setup.py
jaffle/jaffle/: duckpond.py
jaffle/jaffle/assets/: __init__.py
jaffle/jaffle_tests/: test_assets.py
